infra/candyscan/daemon/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: candyscan-daemon
  labels:
    name: candyscan-daemon
    app: CANdyScan
    app.kubernetes.io/part-of: CANdyScan
    role: daemon
    env: prod
spec:
  description: Allow daemon ports to be accessed by the web app, and daemon ui.
  podSelector:
    matchLabels:
      app: CANdyScan
      role: daemon
      env: prod
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ca7f8f
              environment: prod
          podSelector:
            matchLabels:
              app: CANdyScan
              role: web
              env: prod
      ports:
        - port: 3709
          protocol: TCP

    - from:
        - namespaceSelector:
            matchLabels:
              name: ca7f8f
              environment: prod
          podSelector:
            matchLabels:
              app: CANdyScan
              role: daemon-ui
              env: prod
      ports:
        - port: 3709
          protocol: TCP
  policyTypes:
    - Ingress
